--- a/static/style.css
+++ b/static/style.css
@@ -41,8 +41,21 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    box-shadow: inset 0px 0px 10px 1px var(--primary-text-color);
     cursor: pointer;
+}
+.themebutton::after{
+    position: absolute;
+    content: "Theme";
+    bottom: -25px;
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: var(--primary-bg-color);
+    background-color: var(--primary-text-color);
+    opacity: 0;
+}
+.themebutton:hover::after{
+    opacity: 1;
 }
 .sun{
     position: absolute;
@@ -90,7 +103,7 @@ body{
     border-radius: 10px;
     padding: 5px 10px;
     width: max(50%, 100px);
-    height: max(50%, 100px);
+    height: max(50%, 200px);
     background-color: var(--primary-bg-color);
 }
 .nav-title{
@@ -153,6 +166,7 @@ body{
     z-index: -1;
 }
 #title{
+    padding: 5px;
     color: var(--primary-text-color);
 }
 #errormsg, #roomerrormsg{
@@ -192,7 +206,13 @@ body{
 .chatbox{
     padding: 5px 0px;
     height: calc(100% - 100px);
+    overflow-x: scroll;
     border-top: 1px solid var(--primary-text-color);
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+}
+.chatbox::-webkit-scrollbar{
+    display: none;
 }
 .messagesender{
     display: flex;
@@ -202,7 +222,7 @@ body{
     height: 60px;
 }
 .msginput{
-    height: 30px;
+    height: 40px;
     width: calc(100% - 100px);
     padding: 5px;
     background-color: transparent;
@@ -210,6 +230,10 @@ body{
     color: var(--primary-text-color);
     border-radius: 3px;
     resize: none;
+    scrollbar-width: none;
+}
+.msginput::-webkit-scrollbar{
+    display: none;
 }
 .sendinput{
     width: 60px;
@@ -225,12 +249,14 @@ body{
     position: relative;
     background-color: var(--primary-bg-color);
     padding: 10px;
+    margin-top: 5px;
     color: var(--primary-text-color);
     border: 2px solid var(--primary-text-color);
     width: fit-content;
     max-width: 50%;
     border-radius: 10px;
     font-size: 1.5rem;
+    word-break: break-all;
 }
 .recivemsg{
     left: 10px;
@@ -253,4 +279,33 @@ body{
 .sendername{
     color: blue;
     font-size: 1rem;
+}
+@media (max-width:700px) {
+    .nav-title{
+        justify-content: start;
+        padding: 10px;
+        font-size: 30px;
+    }
+    .namebox{
+        font-size: 1.5rem;
+    }
+    .roomcode{
+        font-size: 1.5rem;
+    }
+}
+@media (max-width:350px) {
+    .nav-title{
+        justify-content: start;
+        padding: 10px;
+        font-size: 20px;
+    }
+    .namebox{
+        font-size: 1rem;
+    }
+    .roomcode{
+        font-size: 1rem;
+    }
+    #title{
+        font-size: 1rem;
+    }
 }
